--- a/pages/form.css
+++ b/pages/form.css
@@ -102,7 +102,8 @@ button:hover {
   transition: all 0.2s;
 }
 
-.button-loading .button_text {
+.button-loading .button_text,
+.button-loading svg {
   visibility: hidden;
   opacity: 0;
 }
