fix color of loading animation of audioButton

--- a/pages/form.css
+++ b/pages/form.css
@@ -124,6 +124,10 @@ button:hover {
   animation: button-loading-spinner 1s ease infinite;
 }
 
+#audioButton.button-loading::after {
+  border-color: rgb(48 52 54) transparent transparent;
+}
+
 @keyframes button-loading-spinner {
   from {
     transform: rotate(0turn);
